[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
derive_builder = "0.12.0"
prost = "0.11.0"
prost-types = "0.11.1"
regex = "1.6.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_yaml = "0.9.14"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls"] }
thiserror = "1.0.37"
tonic = { version = "0.8.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.8.2"
