[package]
name = "order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.58"
chrono = "0.4.22"
futures = { version = "0.3.25", default-features = false }
sqlx = { version = "0.6.2", features = ["chrono", "uuid", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.21.2", features = ["sync"] }
tracing = "0.1.37"

[dev-dependencies]
prost-types = "0.11.2"
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
tokio = { version = "1.21.2", features = ["full"] }
