[package]
name = "roder-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.66"
futures = { version = "0.3.25", default-features = false }
order = { version = "0.1.0", path = "../order" }
tokio = { version = "1.23.0", features = ["full"] }
tonic = { version = "0.8.3", features = ["gzip", "tokio-rustls"] }

[dev-dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
lazy_static = "1.4.0"
